# SWE-Shopping-App

./: .envrc  .gitignore  flake.nix  package-lock.json
.github/workflows/: build-backend.yaml  build-docs.yaml  build-frontend-functions.yaml  build-frontend-website.yaml  build-frontend.yaml  check.yaml
docs/: .gitignore  Architecture.d2  Project.md
docs/proposal/: proposal.typ
docs/report/: report.typ
nix/: flake.nix  treefmt.nix
nix/lib/: default.nix
nix/pkgs/: default.nix
nix/pkgs/docs/: default.nix  lib.nix
nix/pkgs/docs/architecture/: package.nix
nix/pkgs/docs/project/: package.nix
nix/pkgs/docs/proposal/: package.nix
src/backend/api/: Cargo.toml  deny.toml  flake.nix
src/backend/api/src/: app.rs  configuration.rs  constants.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/backend/api/src/routes/v1/: health.rs  md2html.rs  mod.rs
src/backend/api/tests/api/: helpers.rs  main.rs
src/backend/api/tests/api/general/: mod.rs  swagger.rs
src/backend/api/tests/api/v1/: health.rs  md2html.rs  mod.rs
src/frontend/: .env.example  .firebaserc  .gitignore  README.md  eslint.config.js  eslint.config.mjs  firebase.json  index.html  package-lock.json  package.json  setAdmin.cjs  tsconfig.base.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/frontend/firebase/: firestore.rules  storage.rules
src/frontend/functions/: package-lock.json  package.json  tsconfig.json
src/frontend/nix/: package.nix
src/frontend/shared/: constants.ts
src/frontend/src/: index.css  main.tsx  vite-env.d.ts
(+65 files in other folders)
