[package]
name = "phobost"
description = "Backend API for Phobost"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
clap = { version = "4.5.50", features = [
  "color",
  "derive",
  "env",
  "suggestions",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "propagate-header",
  "request-id",
  "set-header",
  "timeout",
  "trace",
  "tracing",
] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-error = { version = "0.2.1", features = ["traced-error"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "json",
  "registry",
] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
utoipauto = "0.2.0"
uuid = { version = "1.18.1", features = ["fast-rng", "macro-diagnostics", "v4"] }


[dev-dependencies]
reqwest = "0.12.24"

